data/derived/sp14/progs/unify/prog0336.ml.out
Characters 51-72:
  if i > 0 then mulByDigit ((i-1), (bigAdd l l))
                           ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
